<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectPapa">

    <TextView
            android:text="@string/lbl_txt_crear_actor_nombre"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/txt_nombre_actor2"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_nombre_actor2"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_actor2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintVertical_bias="0.213"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_num_peliculas_actor2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintVertical_bias="0.552"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fn_actor2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintVertical_bias="0.437"/>
    <TextView
            android:text="@string/lbl_txt_crear_actor_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintStart_toStartOf="@+id/txt_apellido_actor2"
            app:layout_constraintBottom_toTopOf="@+id/txt_apellido_actor2" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/lbl_txt_crear_actor_fn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="@+id/txt_fn_actor2"
            app:layout_constraintBottom_toTopOf="@+id/txt_fn_actor2"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_crear_actor3"
            android:text="@string/txt_lbl_crear_actor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.058"/>
    <Switch
            android:text="@string/lbl_txt_crear_actor_retirado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sw_retirado_actor2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.254" app:layout_constraintVertical_bias="0.627"/>
    <TextView
            android:text="@string/lbl_txt_crear_actor_num_peliculas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" app:layout_constraintStart_toStartOf="@+id/txt_num_peliculas_actor2"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_num_peliculas_actor2"
    />
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_apellido_actor2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.568" app:layout_constraintVertical_bias="0.318"/>
    <Button
            android:text="@string/lbl_btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_eliminar_actor" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.755"/>
    <Button
            android:text="@string/lbl_btn_actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_actualizar_actor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" app:layout_constraintVertical_bias="0.755"
            app:layout_constraintStart_toEndOf="@+id/btn_eliminar_actor" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/lbl_btn_gestionar_hijo"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_gestionar_pelicula" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_eliminar_actor" app:layout_constraintVertical_bias="0.38"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"/>
    <Button
            android:text="@string/lbl_btn_crear_hijo"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:id="@+id/btn_crear_pelicula" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/btn_actualizar_actor"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.028"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>