<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearActores">

    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_actor"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintVertical_bias="0.213"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_crear_actor"
            android:text="@string/txt_lbl_crear_actor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.058"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_apellido_actor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.561"
            app:layout_constraintVertical_bias="0.33"/>
    <TextView
            android:text="@string/lbl_txt_crear_actor_nombre"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/txt_nombre_actor"
            android:layout_marginStart="8dp" android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_nombre_actor"/>
    <TextView
            android:text="@string/lbl_txt_crear_actor_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/txt_apellido_actor"
            android:layout_marginStart="8dp" android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_apellido_actor"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fn_actor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintVertical_bias="0.437"/>
    <TextView
            android:text="@string/lbl_txt_crear_actor_fn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/txt_fn_actor"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_fn_actor"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_num_peliculas_actor"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintVertical_bias="0.552"/>
    <TextView
            android:text="@string/lbl_txt_crear_actor_num_peliculas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/txt_num_peliculas_actor"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_num_peliculas_actor"/>
    <Switch
            android:text="@string/lbl_txt_crear_actor_retirado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sw_retirado_actor" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.254" app:layout_constraintVertical_bias="0.627"/>
    <Button
            android:text="@string/lbl_btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.462" app:layout_constraintVertical_bias="0.77"/>
</android.support.constraint.ConstraintLayout>