<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SeleccionHijo">

    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_pelicula_rating2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.397"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_pelicula_anio_l2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.281"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_pelicula_actores2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.514"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_pelicula_sinopsis2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.622"/>
    <TextView
            android:text="@string/txt_lbl_crear_pelicula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.044"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_rating2"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_rating2"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_anio_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_anio_l2"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_anio_l2"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_nombre2"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_nombre2"
    />
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_sinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView20" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_sinopsis2"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_sinopsis2"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_actores"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:id="@+id/textView21" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_actores2"
            app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_actores2" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_pelicula_nombre2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.168"
            app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:text="@string/lbl_btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_eliminar_pelicula" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.224" app:layout_constraintVertical_bias="0.791"/>
    <Button
            android:text="@string/lbl_btn_actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_actualizar_pelicula" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.756" app:layout_constraintVertical_bias="0.791"/>
</android.support.constraint.ConstraintLayout>