<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearPeliculas">

    <TextView
            android:text="@string/txt_lbl_crear_pelicula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.044"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_pelicula_nombre" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.168"
            app:layout_constraintHorizontal_bias="0.496"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_nombre"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_nombre"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_pelicula_anio_l" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.281"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_pelicula_rating" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.397"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_pelicula_actores" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.514"/>
    <EditText
            android:layout_width="256dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_pelicula_sinopsis" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.622"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_anio_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_anio_l"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_anio_l"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_rating"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_rating"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_actores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_actores"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_actores"/>
    <TextView
            android:text="@string/lbl_txt_crear_pelicula_sinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" app:layout_constraintStart_toStartOf="@+id/txt_pelicula_sinopsis"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_pelicula_sinopsis"/>
    <Button
            android:text="@string/lbl_btn_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_pelicula" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.782"/>
</android.support.constraint.ConstraintLayout>